# muSYCL

./: .gitmodules  CMakeLists.txt  README.rst
experiment/: CMakeLists.txt  audio.cpp  midi-libre.cpp  midi.cpp  synth.cpp
include/musycl/: arpeggiator.hpp  audio.hpp  automate.hpp  clock.hpp  config.hpp  control.hpp  dco.hpp  envelope.hpp  group.hpp  ladder_filter.hpp  lfo.hpp  low_pass_filter.hpp  midi.hpp  modulation_actuator.hpp  music_theory.hpp  musycl.hpp  noise.hpp  pitch_bend.hpp  resonance_filter.hpp  scheduler.hpp  sound_generator.hpp  sustain.hpp  user_interface.hpp
include/musycl/effect/: delay.hpp  flanger.hpp  range_delay.hpp
include/musycl/midi/: channel_assignment.hpp  midi_in.hpp  midi_out.hpp
include/musycl/midi/controller/: keylab_essential.hpp
include/musycl/pipe/: audio.hpp  midi_in.hpp  sustain.hpp
include/musycl/sound_generator/: dco_envelope.hpp
src/: CMakeLists.txt  musycl_synth.cpp  sound.cpp
